--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "fixall",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
+  }
 }
