--- a/package.json
+++ b/package.json
@@ -1,12 +1,1 @@
-{
-  "name": "fixall",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": "18.x"
-  }
-}
+{ "name": "fixall", "version": "1.0.0", "type": "module" }
