--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,19 +2,19 @@
   "name": "FIXALL",
   "short_name": "FIXALL",
   "description": "Servicios profesionales a domicilio",
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#0f1020",
   "theme_color": "#6c5ce7",
   "icons": [
     {
       "src": "/logo/logo.png",
-      "sizes": "192x192",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
       "src": "/logo/logo.png",
-      "sizes": "512x512",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
