--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,11 @@
       "sizes": "192x192",
       "type": "image/png"
     }
+  ],
+  "display_override": [
+    "browser",
+    "minimal-ui",
+    "standalone",
+    "window-controls-overlay"
   ]
 }
